[gd_scene load_steps=8 format=3 uid="uid://88s2fwk2lrtx"]

[ext_resource type="Script" path="res://game_client/card/card_front.gd" id="1_27fqa"]
[ext_resource type="FontFile" uid="uid://dttdqnx855wtb" path="res://fonts/ShipporiAntique-Medium.otf" id="2_e804v"]

[sub_resource type="Theme" id="Theme_o7j8i"]
Label/fonts/font = ExtResource("2_e804v")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_q3ike"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_1vpoe"]
noise = SubResource("FastNoiseLite_q3ike")

[sub_resource type="LabelSettings" id="LabelSettings_gxwm6"]
font_size = 26
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ipdl6"]
font_size = 56
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[node name="CardFront" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 364.0
offset_bottom = 510.0
pivot_offset = Vector2(182, 255)
theme = SubResource("Theme_o7j8i")
script = ExtResource("1_27fqa")

[node name="ColorRectFrame" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_1vpoe")
expand_mode = 1
stretch_mode = 6

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -52.0
offset_right = -12.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="LabelName" type="Label" parent="ColorRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(170, 20)
text = "カード名（仮）"
label_settings = SubResource("LabelSettings_gxwm6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Power" type="Polygon2D" parent="."]
position = Vector2(48, 48)
scale = Vector2(3, 3)
polygon = PackedVector2Array(-10, -14, -14, -10, -14, 10, -10, 14, 10, 14, 14, 10, 14, -10, 10, -14)

[node name="Hit" type="Polygon2D" parent="."]
position = Vector2(48, 140)
scale = Vector2(3, 3)
polygon = PackedVector2Array(0, -16, -12, 4, -4, 12, 4, 12, 12, 4)

[node name="Block" type="Polygon2D" parent="."]
position = Vector2(48, 216)
scale = Vector2(3, 3)
polygon = PackedVector2Array(4, 12, 12, 0, 8, -12, -8, -12, -12, 0, -4, 12)

[node name="Level" type="Polygon2D" parent="."]
position = Vector2(330, 34)
scale = Vector2(2.5, 2.5)
color = Color(1, 1, 0, 1)
polygon = PackedVector2Array(2, -12, 7, -10, 10, -7, 12, -2, 12, 2, 10, 7, 7, 10, 2, 12, -2, 12, -7, 10, -10, 7, -12, 2, -12, -2, -10, -7, -7, -10, -2, -12)

[node name="LabelPower" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 6.0
offset_top = 2.0
offset_right = 90.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 46)
text = "1"
label_settings = SubResource("LabelSettings_ipdl6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelHit" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 6.0
offset_top = 96.0
offset_right = 90.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 46)
text = "1"
label_settings = SubResource("LabelSettings_ipdl6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelBlock" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 6.0
offset_top = 166.0
offset_right = 90.0
offset_bottom = 258.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 46)
text = "1"
label_settings = SubResource("LabelSettings_ipdl6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelLevel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -76.0
offset_top = -13.0
offset_right = 8.0
offset_bottom = 79.0
grow_horizontal = 0
scale = Vector2(0.8, 0.8)
pivot_offset = Vector2(42, 46)
text = "1"
label_settings = SubResource("LabelSettings_ipdl6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -253.0
offset_right = -12.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2
